tests/ui/assumptions_on_binders/alias_outlives.stderr
error: unsatisfied lifetime constraint from -Zassumptions-on-binders :3
  --> $DIR/alias_outlives.rs:41:1
   |
LL | const REGIONCK_ENV_FAIL<'a, T: AliasHaver>: ReqTrait<T::Assoc> = todo!()
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: meoow :c

error[E0282]: type annotations needed
  --> $DIR/alias_outlives.rs:24:12
   |
LL |     let _: ReqTrait<T::Assoc>;
   |            ^^^^^^^^^^^^^^^^^^ cannot infer type for struct `ReqTrait<<T as AliasHaver>::Assoc>`

error[E0282]: type annotations needed
  --> $DIR/alias_outlives.rs:33:12
   |
LL |     let _: ReqTrait<T::Assoc>;
   |            ^^^^^^^^^^^^^^^^^^ cannot infer type for struct `ReqTrait<<T as AliasHaver>::Assoc>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0282`.
